--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
+        <h1>Lei Zhang</h1>
         <p>Associate Professor of College of Information Science and Technology<br>Donghua University</p>
-        <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
+        <p><br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155"></a></p>
     <h3><a href="https://tyleransom.github.io/">Home</a></h3>
         <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
     <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
