--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       </header>
       <section>
       <img src="1.jpg" height="318" width="218" alt="Lei Zhang"></h3>
-      <p><b>教育背景 <a href="http://www.ou.edu/cas/economics">Economics</a> at the <a href="http://www.ou.edu/">University of Oklahoma</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
-      <p>My research interests include labor economics, urban economics, the economics of education, and applications of machine learning.</p>
+      <p><b>教育背景 </p>
+      <p>2012-2016	Universidad Politécnica de Madrid	博士（Cum Laude）</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
