--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
       <img src="1.jpg" height="318" width="218" alt="Lei Zhang"></h3>
       <p><b>教育背景 </p>
       <p>2012-2016	Universidad Politécnica de Madrid	博士（Cum Laude）</p>
+      <p>2010-2012	合肥工业大学	                     硕士研究生 （公派出国）</p>
+      <p>2005-2009	安徽大学                           本科</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
