--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="wrapper">
       <header>
         <h1>Lei Zhang</h1>
-        <p>Associate Professor of College of Information Science and Technology<br>Donghua University</p>
+        <p>Associate Professor of College of Information Science and Technology<br>of Donghua University</p>
     <h3><a href="https://tyleransom.github.io/">Home</a></h3>
         <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
     <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
@@ -111,7 +111,12 @@
       <p><b>教育背景 </p>
       <p>2012-2016	Universidad Politécnica de Madrid	博士（Cum Laude）</p>
       <p>2010-2012	合肥工业大学	                     硕士研究生 （公派出国）</p>
-      <p>2005-2009	安徽大学                          本科</p>
+      <p>2005-2009	安徽大学                           本科</p>
+      <p><b>工作经历 </p>
+      <p>2018-至今	东华大学	                     讲师、副教授</p>
+      <p>2017-2018	Ericsson	                    Algorithm Engineer</p>
+      <p>2016-2017	中国科学院上海微系统所	         助理研究员</p>
+      <p>2016-2016	University of South Carolina	Visiting Scholar</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
