--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <header>
         <h1>Lei Zhang</h1>
         <p>Associate Professor of College of Information Science and Technology<br>of Donghua University</p>
-    <h3><a href="https://tyleransom.github.io/">Home</a></h3>
+    <h3><a href="https://zy0047.github.io/">Home</a></h3>
         <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
     <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
         <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
