--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
       </header>
       <section>
       <img src="1.jpg" height="318" width="218" alt="Lei Zhang"></h3>
-      <p><b>教育背景 </b></p>
+      <p><b>教育背景 </b><br></p>
       <p>2012-2016	Universidad Politécnica de Madrid	博士（Cum Laude）</p>
       <p>2010-2012	合肥工业大学	                     硕士研究生 （公派出国）</p>
       <p>2005-2009	安徽大学                           本科</p>
-      <p><b>工作经历 </b></p>
+      <p><b>工作经历 </b><br></p>
       <p>2018-至今	东华大学	                     讲师、副教授</p>
       <p>2017-2018	Ericsson	                    Algorithm Engineer</p>
       <p>2016-2017	中国科学院上海微系统所	         助理研究员</p>
