--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
       <p>●	中央JW科技委 GF创新项目（19-163-21-TS-001-014-01）参与 </p>
       <p>●	企业委托项目（HX104220244）：岸海散射信道建模 <b>主持</b><br></p>
       <p>●	企业委托项目（HX104210835）：基于软件无线电的车联网通信系统研究 <b>主持</b><br></p>
+      <p><b>社会服务 </b><br></p>
+      <p>●	Wireless Communications and Mobile Computing 编委</p>
+      <p>●	Frontiers in Communications and Networks编委</p>
+      <p>●	IEEE ICEICT2022 分会主席</p>
+      <p>●	IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等期刊审稿人</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
