--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       <p>●	Frontiers in Communications and Networks编委</p>
       <p>●	IEEE ICEICT2022 分会主席</p>
       <p>●	IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等期刊审稿人</p>
+      <p>●	IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
