--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   <body>
     <div class="wrapper">
       <header>
+        <img src="1.jpg" height="318" width="214" alt="Lei Zhang"></h3>
         <h1>Lei Zhang</h1>
         <p>Associate Professor of College of Information Science and Technology<br>of Donghua University</p>
     <h3><a href="https://zy0047.github.io/">Home</a></h3>
