--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="1.jpg" height="268" width="192" alt="Lei Zhang"></h3>
+        <img src="2.jpg" height="268" width="192" alt="Lei Zhang"></h3>
         <h1>Lei Zhang</h1>
         <p>Associate Professor of College of Information Science and Technology<br>of Donghua University</p>
     <h3><a href="https://zy0047.github.io/">Home</a></h3>
@@ -100,14 +100,9 @@
       </header>
       <section>
       <p><b>教育背景 </b><br></p>
-      <p>2012-2016	Universidad Politécnica de Madrid	博士（Cum Laude）</p>
-      <p>2010-2012	合肥工业大学	                     硕士研究生 （公派出国）</p>
-      <p>2005-2009	安徽大学                           本科</p>
+      <p>2012-2016	Universidad Politécnica de Madrid	博士（Cum Laude）<br/>2010-2012	合肥工业大学 硕士研究生 （公派出国）<br/>2005-2009	安徽大学 本科</p>
       <p><b>工作经历 </b><br></p>
-      <p>2018-至今	东华大学	                     讲师、副教授</p>
-      <p>2017-2018	Ericsson	                    Algorithm Engineer</p>
-      <p>2016-2017	中国科学院上海微系统所	         助理研究员</p>
-      <p>2016-2016	University of South Carolina	Visiting Scholar</p>
+      <p>2018-至今	东华大学 讲师、副教授<br/>2017-2018	Ericsson Algorithm Engineer<br/>2016-2017	中国科学院上海微系统所 助理研究员<br/>2016-2016	University of South Carolina	Visiting Scholar</p>
       <p><b>科研项目 </b><br></p>
       <p>●	国家自然科学基金青年基金（61901104） <b>主持</b><br></p>
       <p>●	上海市松江区科技攻关项目（20SJKJGG4C） <b>主持</b><br></p>
