--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <p><b>工作经历 </b><br></p>
       <p>2018-至今	东华大学 讲师、副教授<br/>2017-2018	Ericsson Algorithm Engineer<br/>2016-2017	中国科学院上海微系统所 助理研究员<br/>2016-2016	University of South Carolina	Visiting Scholar</p>
       <p><b>科研项目 </b><br></p>
-      <p>●	国家自然科学基金青年基金（61901104） <b>主持</b><br><br/>●	上海市松江区科技攻关项目（20SJKJGG4C） <b>主持</b><br><br/>●	中央高校基本科研业务费专项资金自由探索项目（19D110407）<b>主持</b><br><br/>●	国家自然科学基金面上项目（62072096）参与<br/>●	中央JW科技委 GF创新项目（19-163-21-TS-001-014-01）参与<br/>●	企业委托项目（HX104220244）：岸海散射信道建模 <b>主持</b><br>●	企业委托项目（HX104210835）：基于软件无线电的车联网通信系统研究 <b>主持</b><br></p>
+      <p>●	国家自然科学基金青年基金（61901104） <b>主持</b><br><br/>●	上海市松江区科技攻关项目（20SJKJGG4C） <b>主持</b><br><br/>●	中央高校基本科研业务费专项资金自由探索项目（19D110407）<b>主持</b><br><br/>●	国家自然科学基金面上项目（62072096）参与<br/>●	中央JW科技委 GF创新项目（19-163-21-TS-001-014-01）参与<br/>●	企业委托项目（HX104220244）：岸海散射信道建模 <b>主持</b><br><br/>●	企业委托项目（HX104210835）：基于软件无线电的车联网通信系统研究 <b>主持</b><br></p>
       <p><b>社会服务 </b><br></p>
       <p>●	Wireless Communications and Mobile Computing 编委</p>
       <p>●	Frontiers in Communications and Networks编委</p>
