--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <header>
         <img src="2.jpg" height="268" width="192" alt="Lei Zhang"></h3>
         <h1>Lei Zhang</h1>
-        <p>Associate Professor of College of Information Science and Technology<br>of Donghua University</p>
+        <p>张磊 副教授 | Lei Zhang, Ph.D., A/Prof.<br>东华大学信息科学与技术学院<br>College of Information Sciences and Technology</p>
     <h3><a href="https://zy0047.github.io/">Home</a></h3>
         <h3><a href="https://tyleransom.github.io/research.html">Publication</a></h3> 
     <b>Social</b><br>
@@ -95,7 +95,7 @@
         </div>
         <br>
 
-    <p><b>Contact:</b><br>lei.zhang@dhu.edu.cn</p>
+    <p><b>Contact:</b><br>上海· 松江区人民北路2999号<br>2999 North Renmin Rd., Songjiang D., Shanghai 201620, China<br>2号学院楼618 | Room 618.,  College Building No.2</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
