--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
       <p>●	国家自然科学基金青年基金（61901104） <b>主持</b><br/>●	上海市松江区科技攻关项目（20SJKJGG4C） <b>主持</b><br/>●	中央高校基本科研业务费专项资金自由探索项目（19D110407）<b>主持</b><br/>●	国家自然科学基金面上项目（62072096）参与<br/>●	中央JW科技委 GF创新项目（19-163-21-TS-001-014-01）参与<br/>●	企业委托项目（HX104220244）：岸海散射信道建模 <b>主持</b><br/>●	企业委托项目（HX104210835）：基于软件无线电的车联网通信系统研究 <b>主持</b><br></p>
       <p><b>社会服务 </b><br></p>
       <p>●	Wireless Communications and Mobile Computing 编委<br/>●	Frontiers in Communications and Networks编委<br/>●	IEEE ICEICT2022 分会主席<br/>●	IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等期刊审稿人</p>
+      <p><b>学术论文 </b><br></p>
+      <ol type="[1]">
+        <li>L. Zhang, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” Future Generation Computer Systems, 2022, DOI: 10.1016/j.future.2022.10.037 (一区 TOP, IF=7.307)<li/>
+        <li>L. Zhang, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (Accepted, 二区SCI, IF=5.332)<li/>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
