--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       <p>●	Wireless Communications and Mobile Computing 编委<br/>●	Frontiers in Communications and Networks编委<br/>●	IEEE ICEICT2022 分会主席<br/>●	IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等期刊审稿人</p>
       <p><b>学术论文 </b><br></p>
       <ol type="[1]">
-        <li>L. Zhang, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” Future Generation Computer Systems, 2022, DOI: 10.1016/j.future.2022.10.037 (一区 TOP, IF=7.307)<li/>
-        <li>L. Zhang, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (Accepted, 二区SCI, IF=5.332)<li/>
+        <li>L. Zhang, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” Future Generation Computer Systems, 2022, DOI: 10.1016/j.future.2022.10.037 (一区 TOP, IF=7.307)</li>
+        <li>L. Zhang, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (Accepted, 二区SCI, IF=5.332)</li>
       </ol>
       </section>
     </div>
