--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
     <div class="wrapper">
       <header>
         <img src="2.jpg" height="268" width="192" alt="Lei Zhang"></h3>
-        <h1>Lei Zhang</h1>
-        <p>张磊 副教授 | Lei Zhang, Ph.D., A/Prof.<br>东华大学信息科学与技术学院<br>College of Information Sciences and Technology</p>       
+        <h1>张磊 副教授、硕导</h1>
+        <p>东华大学 信息科学与技术学院</p>
+        <p>Lei Zhang, Ph.D., A/Prof.<br><br>College of Information Sciences and Technology, Donghua University</p>       
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
