--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <br>
 
-    <p><b>Contact:</b><br>上海· 松江区人民北路2999号<br>2999 North Renmin Rd., Songjiang D., Shanghai 201620, China<br>2号学院楼618 | Room 618.,  College Building No.2</p>
+    <p><b>Contact:</b><br>上海市松江区人民北路2999号东华大学2号学院楼618<br>Room 618.,  College Building 2#, 2999 North Renmin Rd., Songjiang D., Shanghai 201620, China<br> </p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
