--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="wrapper">
       <header>
         <img src="2.jpg" height="268" width="192" alt="Lei Zhang"></h3>
-        <h1>张磊 副教授、硕导</h1>
+        <h1> <b>张磊</b> <p>副教授、硕导</p></h1>
         <p>东华大学 信息科学与技术学院</p>
         <p>Lei Zhang, Ph.D., A/Prof.<br><br>College of Information Sciences and Technology, Donghua University</p>       
     <b>Social</b><br>
@@ -95,19 +95,39 @@
         <br>
 
     <p><b>Contact:</b><br>上海市松江区人民北路2999号东华大学2号学院楼618<br>Room 618.,  College Building 2#, 2999 North Renmin Rd., Songjiang D., Shanghai 201620, China<br> </p>
-    <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
       <p><b>教育背景 </b><br></p>
-      <p>2012-2016	Universidad Politécnica de Madrid	博士（Cum Laude）<br/>2010-2012	合肥工业大学 硕士研究生 （公派出国）<br/>2005-2009	安徽大学 本科</p>
+      <p>
+        2012-2016	Universidad Politécnica de Madrid	     信息系统工程           博士（Cum Laude）<br/>
+        2010-2012	合肥工业大学                            信号与信息处理         硕士研究生 （公派出国）<br/>
+        2005-2009	安徽大学                                信工程                本科</p>
       <p><b>工作经历 </b><br></p>
-      <p>2018-至今	东华大学 讲师、副教授<br/>2017-2018	Ericsson Algorithm Engineer<br/>2016-2017	中国科学院上海微系统所 助理研究员<br/>2016-2016	University of South Carolina	Visiting Scholar</p>
+      <p>
+        2018-至今	东华大学                                                      讲师、副教授<br/>
+        2017-2018	Ericsson                                                     Algorithm Engineer<br/>
+        2016-2017	中国科学院上海微系统与信息技术研究所                            助理研究员<br/>
+        2016-2016	University of South Carolina	                               Visiting Scholar</p>
       <p><b>科研项目 </b><br></p>
-      <p>●	国家自然科学基金青年基金（61901104） <b>主持</b><br/>●	上海市松江区科技攻关项目（20SJKJGG4C） <b>主持</b><br/>●	中央高校基本科研业务费专项资金自由探索项目（19D110407）<b>主持</b><br/>●	国家自然科学基金面上项目（62072096）参与<br/>●	中央JW科技委 GF创新项目（19-163-21-TS-001-014-01）参与<br/>●	企业委托项目（HX104220244）：岸海散射信道建模 <b>主持</b><br/>●	企业委托项目（HX104210835）：基于软件无线电的车联网通信系统研究 <b>主持</b><br></p>
-      <p><b>社会服务 </b><br></p>
-      <p>●	Wireless Communications and Mobile Computing 编委<br/>●	Frontiers in Communications and Networks编委<br/>●	IEEE ICEICT2022 分会主席<br/>●	IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等期刊审稿人</p>
-      <p><b>学术论文 </b><br></p>
-      <p>●  L. Zhang, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” Future Generation Computer Systems, 2022, DOI: 10.1016/j.future.2022.10.037 (一区 TOP, IF=7.307)<br/>●	L. Zhang, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (Accepted, 二区SCI, IF=5.332)<br/>●	L. Zhang, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” IEEE Sensors Journal, vol. 22, no.23, pp. 1-10, 2022, DOI:  10.1109/JSEN.2022.3212828. (二区SCI, IF=4.325)<br/>●	L. Zhang, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” Measurement, vol. 110, no., pp.43-52, 2017 (二区SCI, IF=5.131)</p>
+      <p>
+        ●	国家自然科学基金青年基金（61901104）                                    <b>主持</b><br/>
+        ●	上海市松江区科技攻关项目（20SJKJGG4C）                                  <b>主持</b><br/>
+        ●	中央高校基本科研业务费专项资金自由探索项目（19D110407）                   <b>主持</b><br/>
+        ●	国家自然科学基金面上项目（62072096）                                     参与<br/>
+        ●	中央JW科技委 GF创新项目（19-163-21-TS-001-014-01）                      参与<br/>
+        ●	企业委托项目（HX104220244）：岸海散射信道建模                            <b>主持</b><br/>
+        ●	企业委托项目（HX104210835）：基于软件无线电的车联网通信系统研究            <b>主持</b><br></p>
+      <p><b>学术服务 </b><br></p>
+      <p>●	Wireless Communications and Mobile Computing 编委<br/>
+        ●	Frontiers in Communications and Networks编委<br/>
+        ●	IEEE ICEICT2022 分会主席<br/>
+        ●	IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等期刊审稿人</p>
+      <p><b>代表论文 </b><br></p>
+      <p>
+        ●  L. Zhang, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” Future Generation Computer Systems, 2022, DOI: 10.1016/j.future.2022.10.037 (一区 TOP, IF=7.307)<br/>
+        ●	L. Zhang, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (Accepted, 二区SCI, IF=5.332)<br/>
+        ●	L. Zhang, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” IEEE Sensors Journal, vol. 22, no.23, pp. 1-10, 2022, DOI:  10.1109/JSEN.2022.3212828. (二区SCI, IF=4.325)<br/>
+        ●	L. Zhang, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” Measurement, vol. 110, no., pp.43-52, 2017 (二区SCI, IF=5.131)</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
