--- a/index.html
+++ b/index.html
@@ -83,12 +83,14 @@
     <div class="wrapper">
       <header>
         <img src="2.jpg" height="268" width="192" alt="Lei Zhang"></h3>
-        <h1> <b>张磊</b> <p>副教授、硕导</p></h1>
+        <h1> <b>张磊</b> </h1>
+        <b>副教授、硕士生导师</b> 
         <p>东华大学 信息科学与技术学院</p>
         <p>Lei Zhang, Ph.D., A/Prof.<br><br>College of Information Sciences and Technology, Donghua University</p>     
     <b>电子邮箱</b><br>
         <div class="social-row">
           <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
+          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google-square"></i> GitHub</a><br>
           <br>
         </div>
         <br>
@@ -129,14 +131,15 @@
         ● <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” Future Generation Computer Systems, 2022, DOI: 10.1016/j.future.2022.10.037 (一区 TOP, IF=7.307)<br/>
         ●	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (Accepted, 二区SCI, IF=5.332)<br/>
         ●	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” IEEE Sensors Journal, vol. 22, no.23, pp. 1-10, 2022, DOI:  10.1109/JSEN.2022.3212828. (二区SCI, IF=4.325)<br/>
-        ●	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” Measurement, vol. 110, no., pp.43-52, 2017 (二区SCI, IF=5.131)</p>
-        ●	<b>L. Zhang</b>, C. Briso, J.R.O. Fernandez, J.I. Alonso, C. Rodriguez, J. Moreno Garcia, K. Guan, “Delay Spread and Electromagnetic Reverberation in Subway Tunnels and Stations,” IEEE Antennas and Wireless Propagation Letters, vol. 15, no., pp.585-588, 2016 (二区SCI, IF=3.825)
-        ●	M. Zhai, <b>L. Zhang*(通讯作者)</b>, D. Li, “Efficient Modeling of Dispersive Media in Leapfrog WCS-FDTD Method,” IEEE Microwave and Wireless Components Letters, vol. 30, no. 3, pp. 225-228, 2020 (二区SCI, IF=2.719)
-        ●	<b>L. Zhang</b>, Y. Zhu, M. Jiang, Y. Wu, K. Deng, Q. Ni, “Body Temperature Monitoring for Regular COVID-19 Prevention Based on Human Daily Activity Recognition,” Sensors, vol. 21, no. 22, pp. 7540-7558, 2021 (SCI, IF=3.847)
-        ●	<b>L. Zhang</b>, Q. Ni, G. Zhang, M. Zhai, J. Moreno, C. Briso, “Random Forests-enabled Context Detections for Long-term Evolution Network for Railway,” IET Microwaves Antennas & Propagation, Vol. 13, Issue 8, p. 1080-1086, 2019 (SCI, IF=2 .036)
-        ●	<b>L. Zhang</b>, J. Moreno, C. Briso, “Experimental Characterization and Modelling of Intra-Car Communications Inside High-Speed Trains,” IET Microwaves Antennas & Propagation, Vol. 13, no. 8, p. 1060 -1064, 2019 (SCI, IF=2 .036)
-        ●	L. Lin, <b>L. Zhang*(通讯作者)</b>, “Joint Optimization of Offloading and Resource Allocation for SDN-Enabled IoV,” Wireless Communications & Mobile Computing, vol. 2022, no., pp.1-13, 2022 (SCI, IF=2.146)
-        ●	Q. Ni, Z. Fan, <b>L. Zhang*(通讯作者)</b>, B. Zhang, X. Zheng, Y. Zhang, “Daily Activity Recognition and Tremor Quantification from Accelerometer Data for Patients with Essential Tremor Using Stacked Denoising Autoencoders,” International Journal of Computational Intelligence Systems, vol. 15, no.1, pp. 1-13, 2022 (SCI, IF=2.259)
+        ●	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” Measurement, vol. 110, no., pp.43-52, 2017 (二区SCI, IF=5.131)<br/>
+        ●	<b>L. Zhang</b>, C. Briso, J.R.O. Fernandez, J.I. Alonso, C. Rodriguez, J. Moreno Garcia, K. Guan, “Delay Spread and Electromagnetic Reverberation in Subway Tunnels and Stations,” IEEE Antennas and Wireless Propagation Letters, vol. 15, no., pp.585-588, 2016 (二区SCI, IF=3.825)<br/>
+        ●	M. Zhai, <b>L. Zhang*(通讯作者)</b>, D. Li, “Efficient Modeling of Dispersive Media in Leapfrog WCS-FDTD Method,” IEEE Microwave and Wireless Components Letters, vol. 30, no. 3, pp. 225-228, 2020 (二区SCI, IF=2.719)<br/>
+        ●	<b>L. Zhang</b>, Y. Zhu, M. Jiang, Y. Wu, K. Deng, Q. Ni, “Body Temperature Monitoring for Regular COVID-19 Prevention Based on Human Daily Activity Recognition,” Sensors, vol. 21, no. 22, pp. 7540-7558, 2021 (SCI, IF=3.847)<br/>
+        ●	<b>L. Zhang</b>, Q. Ni, G. Zhang, M. Zhai, J. Moreno, C. Briso, “Random Forests-enabled Context Detections for Long-term Evolution Network for Railway,” IET Microwaves Antennas & Propagation, Vol. 13, Issue 8, p. 1080-1086, 2019 (SCI, IF=2 .036)<br/>
+        ●	<b>L. Zhang</b>, J. Moreno, C. Briso, “Experimental Characterization and Modelling of Intra-Car Communications Inside High-Speed Trains,” IET Microwaves Antennas & Propagation, Vol. 13, no. 8, p. 1060 -1064, 2019 (SCI, IF=2 .036)<br/>
+        ●	L. Lin, <b>L. Zhang*(通讯作者)</b>, “Joint Optimization of Offloading and Resource Allocation for SDN-Enabled IoV,” Wireless Communications & Mobile Computing, vol. 2022, no., pp.1-13, 2022 (SCI, IF=2.146)<br/>
+        ●	Q. Ni, Z. Fan, <b>L. Zhang*(通讯作者)</b>, B. Zhang, X. Zheng, Y. Zhang, “Daily Activity Recognition and Tremor Quantification from Accelerometer Data for Patients with Essential Tremor Using Stacked Denoising Autoencoders,” International Journal of Computational Intelligence Systems, vol. 15, no.1, pp. 1-13, 2022 (SCI, IF=2.259)<br/>
+       </p>   
     </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
