--- a/index.html
+++ b/index.html
@@ -101,15 +101,14 @@
         ●	Wireless Communications and Mobile Computing 编委<br/>
         ●	Frontiers in Communications and Networks编委<br/>
         ●	IEEE ICEICT2022 分会主席<br/>
-        ●	IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等期刊审稿人</p>
-      
+        ●	IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等期刊审稿人</p>    
       </header>
       <section>
       <p><b>教育背景 </b><br></p>
       <p>
-        2012-2016	Universidad Politécnica de Madrid	     信息系统工程           博士（Cum Laude）<br/>
-        2010-2012	合肥工业大学                            信号与信息处理         硕士研究生 （公派出国）<br/>
-        2005-2009	安徽大学                                信工程                本科</p>
+        2012-2016	Universidad Politécnica de Madrid	     信息系统工程            <b>博士（Cum Laude）</b> <br/>
+        2010-2012	合肥工业大学                            信号与信息处理           <b>硕士研究生</b>（公派出国）<br/>
+        2005-2009	安徽大学                                通信信工程              <b>本科</b></p>
       <p><b>工作经历 </b><br></p>
       <p>
         2018-至今	东华大学                                                      讲师、副教授<br/>
@@ -128,18 +127,20 @@
 
       <p><b>代表论文 </b><br></p>
       <p>
-        ● <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” Future Generation Computer Systems, 2022, DOI: 10.1016/j.future.2022.10.037 (一区 TOP, IF=7.307)<br/>
-        ●	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (Accepted, 二区SCI, IF=5.332)<br/>
-        ●	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” IEEE Sensors Journal, vol. 22, no.23, pp. 1-10, 2022, DOI:  10.1109/JSEN.2022.3212828. (二区SCI, IF=4.325)<br/>
-        ●	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” Measurement, vol. 110, no., pp.43-52, 2017 (二区SCI, IF=5.131)<br/>
-        ●	<b>L. Zhang</b>, C. Briso, J.R.O. Fernandez, J.I. Alonso, C. Rodriguez, J. Moreno Garcia, K. Guan, “Delay Spread and Electromagnetic Reverberation in Subway Tunnels and Stations,” IEEE Antennas and Wireless Propagation Letters, vol. 15, no., pp.585-588, 2016 (二区SCI, IF=3.825)<br/>
-        ●	M. Zhai, <b>L. Zhang*(通讯作者)</b>, D. Li, “Efficient Modeling of Dispersive Media in Leapfrog WCS-FDTD Method,” IEEE Microwave and Wireless Components Letters, vol. 30, no. 3, pp. 225-228, 2020 (二区SCI, IF=2.719)<br/>
-        ●	<b>L. Zhang</b>, Y. Zhu, M. Jiang, Y. Wu, K. Deng, Q. Ni, “Body Temperature Monitoring for Regular COVID-19 Prevention Based on Human Daily Activity Recognition,” Sensors, vol. 21, no. 22, pp. 7540-7558, 2021 (SCI, IF=3.847)<br/>
-        ●	<b>L. Zhang</b>, Q. Ni, G. Zhang, M. Zhai, J. Moreno, C. Briso, “Random Forests-enabled Context Detections for Long-term Evolution Network for Railway,” IET Microwaves Antennas & Propagation, Vol. 13, Issue 8, p. 1080-1086, 2019 (SCI, IF=2 .036)<br/>
-        ●	<b>L. Zhang</b>, J. Moreno, C. Briso, “Experimental Characterization and Modelling of Intra-Car Communications Inside High-Speed Trains,” IET Microwaves Antennas & Propagation, Vol. 13, no. 8, p. 1060 -1064, 2019 (SCI, IF=2 .036)<br/>
-        ●	L. Lin, <b>L. Zhang*(通讯作者)</b>, “Joint Optimization of Offloading and Resource Allocation for SDN-Enabled IoV,” Wireless Communications & Mobile Computing, vol. 2022, no., pp.1-13, 2022 (SCI, IF=2.146)<br/>
-        ●	Q. Ni, Z. Fan, <b>L. Zhang*(通讯作者)</b>, B. Zhang, X. Zheng, Y. Zhang, “Daily Activity Recognition and Tremor Quantification from Accelerometer Data for Patients with Essential Tremor Using Stacked Denoising Autoencoders,” International Journal of Computational Intelligence Systems, vol. 15, no.1, pp. 1-13, 2022 (SCI, IF=2.259)<br/>
-       </p>   
+        <font size="1">
+        ● <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” Future Generation Computer Systems, 2022, DOI: 10.1016/j.future.2022.10.037 (<b>一区 TOP, IF=7.307</b>)<br/>
+        ●	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (Accepted, 二区SCI, IF=5.332</b>)<br/>
+        ●	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” IEEE Sensors Journal, vol. 22, no.23, pp. 1-10, 2022, DOI:  10.1109/JSEN.2022.3212828. (<b>二区SCI, IF=4.325</b>)<br/>
+        ●	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” Measurement, vol. 110, no., pp.43-52, 2017 (<b>二区SCI, IF=5.131</b>)<br/>
+        ●	<b>L. Zhang</b>, C. Briso, J.R.O. Fernandez, J.I. Alonso, C. Rodriguez, J. Moreno Garcia, K. Guan, “Delay Spread and Electromagnetic Reverberation in Subway Tunnels and Stations,” IEEE Antennas and Wireless Propagation Letters, vol. 15, no., pp.585-588, 2016 (<b>二区SCI, IF=3.825</b>)<br/>
+        ●	M. Zhai, <b>L. Zhang*(通讯作者)</b>, D. Li, “Efficient Modeling of Dispersive Media in Leapfrog WCS-FDTD Method,” IEEE Microwave and Wireless Components Letters, vol. 30, no. 3, pp. 225-228, 2020 (<b>二区SCI, IF=2.719</b>)<br/>
+        ●	<b>L. Zhang</b>, Y. Zhu, M. Jiang, Y. Wu, K. Deng, Q. Ni, “Body Temperature Monitoring for Regular COVID-19 Prevention Based on Human Daily Activity Recognition,” Sensors, vol. 21, no. 22, pp. 7540-7558, 2021 (<b>SCI, IF=3.847</b>)<br/>
+        ●	<b>L. Zhang</b>, Q. Ni, G. Zhang, M. Zhai, J. Moreno, C. Briso, “Random Forests-enabled Context Detections for Long-term Evolution Network for Railway,” IET Microwaves Antennas & Propagation, Vol. 13, Issue 8, p. 1080-1086, 2019 (<b>SCI, IF=2.036</b>)<br/>
+        ●	<b>L. Zhang</b>, J. Moreno, C. Briso, “Experimental Characterization and Modelling of Intra-Car Communications Inside High-Speed Trains,” IET Microwaves Antennas & Propagation, Vol. 13, no. 8, p. 1060 -1064, 2019 (<b>SCI, IF=2.036</b>)<br/>
+        ●	L. Lin, <b>L. Zhang*(通讯作者)</b>, “Joint Optimization of Offloading and Resource Allocation for SDN-Enabled IoV,” Wireless Communications & Mobile Computing, vol. 2022, no., pp.1-13, 2022 (<b>SCI, IF=2.146</b>)<br/>
+        ●	Q. Ni, Z. Fan, <b>L. Zhang*(通讯作者)</b>, B. Zhang, X. Zheng, Y. Zhang, “Daily Activity Recognition and Tremor Quantification from Accelerometer Data for Patients with Essential Tremor Using Stacked Denoising Autoencoders,” International Journal of Computational Intelligence Systems, vol. 15, no.1, pp. 1-13, 2022 (<b>SCI, IF=2.259</b>)<br/>
+        </font>
+        </p>   
     </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
