--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@
     <div class="wrapper">
       <header>
         <img src="2.jpg" height="268" width="192" alt="Lei Zhang"></h3>
-        <h1> <b>张磊 | Lei Zhang</b> </h1>
+        <h1> <b>张磊 | LEI ZHANG</b> </h1>
         <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> 
         <p>东华大学 信息科学与技术学院</p>
-        <p>College of Information Sciences and Technology, Donghua University</p>     
+        <p>College of Information Sciences & Technology, Donghua University</p>     
     <b>联系方式 | Contact</b><br>
         <div class="social-row">
           <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google-square"></i> Google Scholar</a><br>
+          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br>
           <br>
         </div>
         <br>
-    <p><b>通讯地址 | Office:</b><br><font size="1">上海市松江区人民北路2999号2号学院楼618<br>Room 618,College Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font> <br> </p>
+    <p><b>通讯地址 | Office:</b><br><font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font> <br> </p>
       </header>
       <section>
       <p><b><font size="4"> 教育背景 </font></b><br></p>
@@ -123,11 +123,10 @@
         ●	Wireless Communications and Mobile Computing 编委<br/>
         ●	Frontiers in Communications and Networks编委<br/>
         ●	IEEE ICEICT2022 分会主席<br/>
-        ●	IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等期刊审稿人</p>  
-        
+        ●	IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等期刊审稿人</p>   
       <p><b> <font size="4">代表论文 </font> </b><br></p>
       <p>
-        <font size="1">
+        <font size="0.5">
         ● <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” Future Generation Computer Systems, 2022, DOI: 10.1016/j.future.2022.10.037 (<b>一区 TOP, IF=7.307</b>)<br/>
         ●	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (Accepted, 二区SCI, IF=5.332</b>)<br/>
         ●	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” IEEE Sensors Journal, vol. 22, no.23, pp. 1-10, 2022, DOI:  10.1109/JSEN.2022.3212828. (<b>二区SCI, IF=4.325</b>)<br/>
