--- a/index.html
+++ b/index.html
@@ -82,24 +82,24 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="2.jpg" height="268" width="192" alt="Lei Zhang"></h3>
+        <img src="2.jpg" height="268" width="200" alt="Lei Zhang"></h3>
         <h1> <b>张磊 | LEI ZHANG</b> </h1>
         <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> 
-        <p>东华大学 信息科学与技术学院</p>
-        <p>College of Information Sciences & Technology, Donghua University</p>     
-    <b>联系方式 | Contact</b><br>
+        <p>东华大学 信息科学与技术学院<br>
+        College of Information Sciences & Technology, Donghua University</p>     
+    <b>联系 | Contact</b><br>
         <div class="social-row">
           <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br>
           <br>
         </div>
         <br>
-    <p><b>通讯地址 | Office:</b><br><font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font> <br> </p>
+    <p><b>办公 | Office:</b><br><font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font> <br> </p>
       </header>
       <section>
       <p><b><font size="4"> 教育背景 </font></b><br></p>
       <p>
-        2012-2016	Universidad Politécnica de Madrid	     信息系统工程            <b>博士（Cum Laude）</b> <br/>
+        2012-2016	Universidad Politécnica de Madrid	     信息系统工程            <b>博士</b> （Cum Laude）<br/>
         2010-2012	合肥工业大学                            信号与信息处理           <b>硕士研究生</b>（公派出国）<br/>
         2005-2009	安徽大学                                通信信工程              <b>本科</b></p>
       <p><b><font size="4"> 工作经历 </font></b><br></p>
