--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <p>
         <font size="0.5">
         ● <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” Future Generation Computer Systems, 2022, DOI: 10.1016/j.future.2022.10.037 (<b>一区 TOP, IF=7.307</b>)<br/>
-        ●	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (Accepted, 二区SCI, IF=5.332</b>)<br/>
+        ●	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (<b>Accepted, 二区SCI, IF=5.332</b>)<br/>
         ●	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” IEEE Sensors Journal, vol. 22, no.23, pp. 1-10, 2022, DOI:  10.1109/JSEN.2022.3212828. (<b>二区SCI, IF=4.325</b>)<br/>
         ●	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” Measurement, vol. 110, no., pp.43-52, 2017 (<b>二区SCI, IF=5.131</b>)<br/>
         ●	<b>L. Zhang</b>, C. Briso, J.R.O. Fernandez, J.I. Alonso, C. Rodriguez, J. Moreno Garcia, K. Guan, “Delay Spread and Electromagnetic Reverberation in Subway Tunnels and Stations,” IEEE Antennas and Wireless Propagation Letters, vol. 15, no., pp.585-588, 2016 (<b>二区SCI, IF=3.825</b>)<br/>
