--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="2.jpg" height="268" width="198" alt="Lei Zhang"></h3>
-        <h1> <b><font size="6">张磊 | LEI ZHANG</font></b> </h1>
+        <img src="2.jpg" height="200" width="140" alt="Lei Zhang"></h3>
+        <h1> <b><font size="4">张磊 | LEI ZHANG</font></b> </h1>
         <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> 
         <p>东华大学 信息科学与技术学院<br>
         College of Information Sciences & Technology, Donghua University</p>     
@@ -125,7 +125,7 @@
 
       <p><b> <font size="4">代表论文 </font> </b><br>
         <font size="0.5">
-          发表学术论文30余篇（其中一作/通讯SCI论文15篇），近几年代表论文：
+          发表学术论文30余篇（其中一作/通讯SCI论文15篇），近几年代表论文：<br>
         -<b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” Future Generation Computer Systems, 2022, DOI: 10.1016/j.future.2022.10.037 (<b>一区 TOP, IF=7.307</b>)<br/>
         -	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” IEEE Transactions on Instrumentation & Measurement, 2022 (<b>Accepted, 二区SCI, IF=5.332</b>)<br/>
         -	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” IEEE Sensors Journal, vol. 22, no.23, pp. 1-10, 2022, DOI:  10.1109/JSEN.2022.3212828. (<b>二区SCI, IF=4.325</b>)<br/>
