--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="2.jpg" height="268" width="178" alt="Lei Zhang"></h3>
+        <img src="2.jpg" height="280" width="200" alt="Lei Zhang"></h3>
         <h1> <b><font size="4">张磊 | LEI ZHANG</font></b> </h1>
         <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> 
         <p>东华大学 信息科学与技术学院<br>
@@ -92,10 +92,11 @@
           <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br>
           <br>
-        </div>
-        <br>
     <p><b>办公 | Office</b><br><font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font> <br> </p>
-      </header>
+      
+         <img src="dhu.jpg" height="60" width="200" alt="DHU"></h3>
+        </header>
+      
       <section>
       <p><b><font size="4"> 教育背景 </font></b><br>
         2012-2016	Universidad Politécnica de Madrid 信息系统工程  博士(Cum Laude)<br/>
