--- a/index.html
+++ b/index.html
@@ -81,26 +81,24 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <img src="2.jpg" height="280" width="200" alt="Lei Zhang"></h3>
+      <header align="center">
+        <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3>
         <h1> <b><font size="4">张磊 | LEI ZHANG</font></b> </h1>
         <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> 
         <p>东华大学 信息科学与技术学院<br>
         <font size="2">College of Information Sciences & Technology, Donghua University</font>
-        <img src="dhu.jpg" height="90" width="300" alt="DHU">
-      <p>
-      <b>联系 | Contact</b><br>
+      <p><b>联系 | Contact</b><br>
         <div class="social-row">
           <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br>
           <br>
-          
-      <b>办公 | Office</b><br><font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font> <br> 
+       </p>     
+      <p><b>办公 | Office</b><br><font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font> <br> 
       </p> 
       </header>
       
       <section>
-      <p><b><font size="4"> 教育背景 </font></b><br>
+      <p><b><font size="3"> 教育背景 </font></b><br>
         2012-2016	Universidad Politécnica de Madrid 信息系统工程  博士(Cum Laude)<br/>
         2010-2012	合肥工业大学  信号与信息处理   硕士研究生(公派出国)<br/>
         2005-2009	安徽大学  通信工程  本科</p>
