--- a/index.html
+++ b/index.html
@@ -86,15 +86,11 @@
         <h1> <b><font size="4">张磊 | LEI ZHANG</font></b> </h1>
         <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> 
         <p>东华大学 信息科学与技术学院<br>
-        <font size="2">College of Information Sciences & Technology, Donghua University</font>
-      <p><b>联系 | Contact</b><br>
+        <font size="1">College of Information Sciences & Technology, Donghua University</font><br>
+        <font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font><br> 
         <div class="social-row">
           <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br>
-          <br>
-       </p>     
-      <p><b>办公 | Office</b><br><font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font> <br> 
-      </p> 
+          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br>    
       </header>
       
       <section>
