--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         <font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font><br> 
         <div class="social-row">
           <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br>    
+          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br>
+          <img src="DHU.jpg" height="90" width="300">
       </header>
       
       <section>
