--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div align="center" class="social-row">
           <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br>
-          <img src="DHU.jpg" height="90" width="300">
+          <img src="dhu.jpg" height="90" width="300">
       </header>
       
       <section>
