--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> 
         <p>东华大学 信息科学与技术学院<br>
         <font size="1">College of Information Sciences & Technology, Donghua University</font><br>
-        <font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font><br> 
+        <font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font><br>
+        <img src="dhu.jpg" height="90" width="300"><br>
         <div align="center" class="social-row">
           <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br>
-          <img src="dhu.jpg" height="90" width="300">
+          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br> 
       </header>
       
       <section>
