--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <font size="1">上海市松江区人民北路2999号2号学院楼618<br> Room 618, Building 2#, 2999 North Renmin Rd., Shanghai 201620, China </font><br>
         <img src="dhu.jpg" height="90" width="300"><br>
         <div align="center" class="social-row">
-          <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
+          <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a>
           <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br> 
       </header>
       
@@ -125,7 +125,7 @@
         <font size="0.3">
           发表学术论文30余篇（其中一作/通讯SCI论文15篇），近几年代表论文：<br>
         · <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” <i>Future Generation Computer Systems</i>, 2022, DOI: 10.1016/j.future.2022.10.037 (<b>一区 TOP, IF=7.307</b>)<br/>
-        ·	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” <i>IEEE Transactions on Instrumentation & Measurement</i>, 2022 (<b>Accepted, 二区SCI, IF=5.332</b>)<br/>
+        ·	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” <i>IEEE Transactions on Instrumentation and Measurement</i>, 2022 (<b>Accepted, 二区SCI, IF=5.332</b>)<br/>
         ·	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” <i>IEEE Sensors Journal</i>, vol. 22, no.23, pp. 1-10, 2022, DOI:  10.1109/JSEN.2022.3212828. (<b>二区SCI, IF=4.325</b>)<br/>
         ·	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” <i>Measurement</i>, vol. 110, no., pp.43-52, 2017 (<b>二区SCI, IF=5.131</b>)<br/>
         ·	<b>L. Zhang</b>, C. Briso, J.R.O. Fernandez, J.I. Alonso, C. Rodriguez, J. Moreno Garcia, K. Guan, “Delay Spread and Electromagnetic Reverberation in Subway Tunnels and Stations,” <i>IEEE Antennas and Wireless Propagation Letters</i>, vol. 15, no., pp.585-588, 2016 (<b>二区SCI, IF=3.825</b>)<br/>
