--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
       <p><b><font size="3">社会服务 </font></b><br>
         · Wireless Communications & Mobile Computing  <b>编委</b><br/>
         · Frontiers in Communications and Networks <b>编委</b><br/>
-        · IEEE ICEICT2022 <b>分会主席</b><br/>
+        · IEEE ICEICT 2022 <b>分会主席</b><br/>
         · IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等 期刊审稿人</p> 
 
       <p><b> <font size="3">学术论文 </font> </b><br>
         <font size="0.3">
           发表学术论文30余篇（其中一作/通讯SCI论文15篇），近几年代表论文：<br>
         · <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” <i>Future Generation Computer Systems</i>, 2022, DOI: 10.1016/j.future.2022.10.037 (<b>一区 TOP, IF=7.307</b>)<br/>
-        ·	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” <i>IEEE Transactions on Instrumentation and Measurement</i>, 2022 (<b>Accepted, 二区SCI, IF=5.332</b>)<br/>
+        ·	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” <i>IEEE Transactions on Instrumentation and Measurement</i>, 2022, DOI: 10.1109/TIM.2022.3224513 (<b>二区SCI, IF=5.332</b>)<br/>
         ·	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” <i>IEEE Sensors Journal</i>, vol. 22, no.23, pp. 1-10, 2022, DOI:  10.1109/JSEN.2022.3212828. (<b>二区SCI, IF=4.325</b>)<br/>
         ·	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” <i>Measurement</i>, vol. 110, no., pp.43-52, 2017 (<b>二区SCI, IF=5.131</b>)<br/>
         ·	<b>L. Zhang</b>, C. Briso, J.R.O. Fernandez, J.I. Alonso, C. Rodriguez, J. Moreno Garcia, K. Guan, “Delay Spread and Electromagnetic Reverberation in Subway Tunnels and Stations,” <i>IEEE Antennas and Wireless Propagation Letters</i>, vol. 15, no., pp.585-588, 2016 (<b>二区SCI, IF=3.825</b>)<br/>
