--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         · Wireless Communications & Mobile Computing  <b>编委</b><br/>
         · Frontiers in Communications and Networks <b>编委</b><br/>
         · IEEE ICEICT 2022 <b>分会主席</b><br/>
-        · IEEE COMMUN MAG、IEEE TVT、ENVIRON MODELL SOFTW等 期刊审稿人</p> 
+        · IEEE COMMUN MAG、IEEE TVT、IEEE TNSM等 期刊审稿人</p> 
 
       <p><b> <font size="3">学术论文 </font> </b><br>
         <font size="0.3">
