--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <p><b> <font size="3">学术论文 </font> </b><br>
         <font size="0.3">
           发表学术论文30余篇（其中一作/通讯SCI论文15篇），近几年代表论文：<br>
-        · <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” <b><i>Future Generation Computer Systems</i></b>, vol. 140z, no. , pp. 311-320, 2023. (<b>中科院TOP, IF=7.307</b>)<br/>
+        · <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” <b><i>Future Generation Computer Systems</i></b>, vol. 140z, no. , pp. 311-320, 2023. (<b>中科院Top, IF=7.307</b>)<br/>
         ·	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” <b><i>IEEE Transactions on Instrumentation and Measurement</i></b>, 2022, DOI: 10.1109/TIM.2022.3224513 (<b>中科院二区, IF=5.332</b>)<br/>
         ·	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” <b><i>IEEE Sensors Journal</i></b>, vol. 22, no. 23, pp. 23529-23538, 2022. (<b>中科院Top, IF=4.325</b>)<br/>
         ·	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” <b><i>Measurement</i></b>, vol. 110, no., pp.43-52, 2017 (<b>中科院二区, IF=5.131</b>)<br/>
