--- a/index.html
+++ b/index.html
@@ -138,7 +138,14 @@
         ...
         </font>
         </p>
-      
+      <p><b> <font size="3">发明专利</font></b><br>
+        1. 复杂室内环境下一种基于改进粒子滤波的无线定位方法 (已公开)
+        2. 一种基于机器学习的蜂窝网无线感知与定位一体化方法	(已受理)
+        3. 基于多任务学习蜂窝网无线信号与用户轨迹联合预测方法 (已受理)
+        4. 一种面向智能服装的能量管理和网络性能的联合优化方法 (已受理)
+        5. 一种基于深度强化学习的无线纺织体域网能量中性操作方法 (已受理)
+        6. 基于人在回路的模型无关可解释方法及可解释框架 (已受理)
+  
       <p><b> <font size="3">荣誉奖励</font></b><br>
         ·	东华大学学生就业创业工作促进奖 2022<br/>
         ·	上海市计算机学会教学成果奖二等奖（3/5）2022<br/>
