--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
         <h1> <b><font size="4">张磊 | LEI ZHANG</font></b> </h1>
         <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> 
         <p>东华大学 信息科学与技术学院<br>
-        <font size="1">College of Information Sciences & Technology, Donghua University</font><br>
+        <font size="2">College of Information Sciences & Technology, Donghua University</font><br>
+        <b>电子邮箱：lei.zhang@dhu.edu.cn</b> 
         <img src="dhu.jpg" height="90" width="300"><br>
         <div align="center" class="social-row">
-          <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a>
-          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br> 
+          <!-- <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a> --> 
+           <!-- <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a><br> --> 
       </header>
       
       <section>
