--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
       <header align="center">
         <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3>
         <h1> <b><font size="4">张磊 | LEI ZHANG</font></b> </h1>
-        <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> <br>
+        <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> </h1>
       
-         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a> <b> lei.zhang@dhu.edu.cn</b> <br>
+         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a> <b> lei.zhang@dhu.edu.cn</b> </h1>
       
          <!-- <b>电子邮箱：lei.zhang@dhu.edu.cn</b> --> 
         <img src="dhu.jpg" height="90" width="300"><br>
