--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
     <div class="wrapper">
       <header align="center">
         <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3>
-        <h1> <b><font size="4">张磊 | LEI ZHANG</font></b> </h1>
-        <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> <br>
+          <!-- 这是单行注释 <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3> -->
+        <!-- <h1> <b><font size="4">张磊 | LEI ZHANG</font></b> </h1>
+         <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> <br> -->
+      <h1> <b><font size="4">张磊</font></b>  </h1>
       <br>
-         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i></a> <b> lei.zhang@dhu.edu.cn</b> <br>
+         <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i></a> <!-- 这是单行注释<b> lei.zhang@dhu.edu.cn</b> <br> -->
       <br>
          <!-- <b>电子邮箱：lei.zhang@dhu.edu.cn</b> --> 
         <img src="dhu.jpg" height="90" width="300"><br>
