--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
   <body>
     <div class="wrapper">
       <header align="center">
-        <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3>
           <!-- 这是单行注释 <img src="2.jpg" height="210" width="150" alt="Lei Zhang"></h3> -->
         <!-- <h1> <b><font size="4">张磊 | LEI ZHANG</font></b> </h1>
          <b>副教授、硕士生导师 | Ph.D., A/Prof.</b> <br> -->
@@ -107,7 +106,8 @@
         2005-2009	安徽大学  通信工程  本科</p>
         
       <p><b><font size="3"> 工作经历 </font></b><br>
-        2018-至今	东华大学                                                     讲师、副教授<br/>
+        2019-至今	东华大学                                                     副教授<br/>
+        2018-2019	东华大学                                                     讲师<br/>
         2017-2018	Ericsson                                                    Algorithm Engineer<br/>
         2016-2017	中国科学院上海微系统与信息技术研究所</b>                       助理研究员<br/>
         2016-2016	University of South Carolina</b>	                          Visiting Scholar</p>
