--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
         2005-2009	安徽大学  通信工程  本科</p>
         
       <p><b><font size="3"> 工作经历 </font></b><br>
-        2019-至今	 东华大学 信息科学与技术学院                                   </b>  副教授<br/>
-        2018-2019	东华大学 信息科学与技术学院                                   </b>  讲师<br/>
-        2017-2018	Ericsson                                                    </b>  Algorithm Engineer<br/>
-        2016-2017	中国科学院 上海微系统与信息技术研究所                          </b>  助理研究员<br/>
-        2016-2016	University of South Carolina                                </b>  Visiting Scholar</p>
+        2019-至今	 东华大学 信息科学与技术学院                                   <b>  副教授</b><br/>
+        2018-2019	东华大学 信息科学与技术学院                                   <b>  讲师</b><br/>
+        2017-2018	Ericsson                                                    <b>  Algorithm Engineer</b><br/>
+        2016-2017	中国科学院 上海微系统与信息技术研究所                          <b>  助理研究员</b><br/>
+        2016-2016	University of South Carolina                                <b>  Visiting Scholar</b></p>
         
       <p><b><font size="3">社会服务 </font></b><br>
         · 中国电子学会会员、中国纺织工程学会会员、IEEE I&M协会 会员 <br/>
