--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
          <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> 电子邮箱</a> 
          <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a>
       <br>
-      <b><font size="1">办公地点：上海市松江区人民北路2999号2号学院楼618教研室<br/>
+      <b><font size="1">上海市松江区人民北路2999号2号学院楼618<br/>
         </header>
       
       <section>
