--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         2016-2016	University of South Carolina                                <b>  Visiting Scholar</b></p>
         
       <p><b><font size="3">社会服务 </font></b><br>
-        · 中国电子学会会员、中国纺织工程学会会员、IEEE I&M协会 会员 <br/>
+        · 中国电子学会、中国纺织工程学会、IEEE I&M协会 <b>会员</b><br/>
         · Wireless Communications & Mobile Computing  <b>编委</b><br/>
         · Frontiers in Communications and Networks <b>编委</b><br/>
         · IEEE ICEICT 2022 <b>分会主席</b><br/>
