--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
          <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"> Email me:<i class="fa fa-fw fa-envelope-square"></i></a>
       <br>
       <font size="0.5">
-        东华大学 信息科学与技术学院
+        东华大学 信息科学与技术学院<br/>
         <br>
         上海市松江区人民北路2999号2号学院楼618<br/>
+        <br>
         <p><b><font size="2"> 研究方向 </font></b><br>
-        <div align="center">
+        <div align="left">
         · Wireless Channel Sounding & Modeling<br/>     
           <br>
         · XAI enabled Contex Awareness<br/>  
