--- a/index.html
+++ b/index.html
@@ -87,10 +87,9 @@
       <br>
          <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"> Email me:<i class="fa fa-fw fa-envelope-square"></i></a>
       <br>
-      <font size="0.5">
         东华大学 信息科学与技术学院<br/>
         <br>
-        上海市松江区人民北路2999号2号学院楼618<br/>
+        <font size="0.5">上海市松江区人民北路2999号2号学院楼618</font> <br/>
         <br>
         <p><b><font size="2"> 研究方向 </font></b><br>
         <div align="left">
@@ -164,7 +163,7 @@
         · Wireless Communications & Mobile Computing  <b>编委</b><br/>
         · Frontiers in Communications and Networks <b>编委</b><br/>
         · IEEE ICEICT 2022 <b>分会主席</b><br/>
-        · IEEE COMMUN MAG、IEEE TVT、IEEE TNSM等 期刊审稿人</p> 
+        · IEEE COMMUN MAG、TVT、TNSM、TIM等期刊 审稿人</p> 
         
       <p><b> <font size="2">荣誉奖励</font></b><br>
         ·	东华大学教学成果奖一等奖 2023（2/8）<br/>
