--- a/index.html
+++ b/index.html
@@ -163,17 +163,17 @@
         
       <p><b> <font size="2">荣誉奖励</font></b><br>
 
-        2023年:  JIMSE Global Young Scientist Award
+        2023年:  JIMSE Global Young Scientist Award <br/>
          <!--  2023年:  “纺织之光”中国纺织工业联合会纺织高等教育教学成果奖二等奖（2/8）  -->
-        2023年: 东华大学教学成果奖一等奖（2/8）
-        2022年: 江苏省“双创人才”
-        2022年: 东华大学学生就业创业工作促进奖
-        2022年: 上海市计算机学会教学成果奖二等奖 (3/5)
-        2021年: 姑苏领军人才
-        2021年: 长三角G60科创走廊突出贡献人才团队（领衔）
-        2021年: 全国大学生电子设计竞赛上海赛区优秀指导教师奖
-        2021年: 东华大学群众体育先进个人
-        2018年:  UPM Premio Extraordinarios de Doctorado
+        2023年: 东华大学教学成果奖一等奖（2/8）<br/>
+        2022年: 江苏省“双创人才” <br/>
+        2022年: 东华大学学生就业创业工作促进奖 <br/>
+        2022年: 上海市计算机学会教学成果奖二等奖 (3/5) <br/>
+        2021年: 姑苏领军人才 <br/>
+        2021年: 长三角G60科创走廊突出贡献人才团队（领衔）<br/>
+        2021年: 全国大学生电子设计竞赛上海赛区优秀指导教师奖 <br/>
+        2021年: 东华大学群众体育先进个人 <br/>
+        2018年:  UPM Premio Extraordinarios de Doctorado <br/></p>
         
       <p><b> <font size="2">主讲课程</font></b><br>
         ·	本科生：《无线移动通信》、《工程导论》<br/>
