--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
        
         <p text-justify:inter-ideograph>    
           <b><font size="2"> 个人简介: </b>2009年本科毕业于安徽大学，2012-2016年受国家公派赴西班牙马德里理工大学（Universidad Politécnica de Madrid，UPM）学习，
-          获UPM硕士和博士学位（Cum Laude & Premio Extraordinarios de Doctorado），美国南卡罗莱纳大学访问学者。
-          长期从事通信与信息系统学科教学及无线通信感知、身联网可穿戴计算等前沿方向的科学研究工作。
+          获UPM硕士和博士学位（Cum Laude），美国南卡罗莱纳大学访问学者。长期从事通信与信息系统学科教学及无线通信感知、身联网可穿戴计算等前沿方向的科学研究工作。
           发表学术论文40余篇（一作/通讯SCI论文18篇），Google学术引用400余次，申请国家发明专利6件。</font>
    
         </header>
