--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         基于多任务学习蜂窝网无线信号与用户轨迹联合预测方法 (<b>CN116261158A</b>)<br/>
         基于人在回路的模型无关可解释方法及可解释框架 (<b>CN116227602A</b>)<br/>
         一种基于深度强化学习的无线纺织体域网能量中性操作方法 (<b>CN116470598A</b>)<br/>
-        一种面向智能服装的能量管理和网络性能的联合优化方法 (<b>CN11632104</b>)<br/></p>
+        一种面向智能服装的能量管理和网络性能的联合优化方法 (<b>CN116321040A</b>)<br/></p>
          </font>
         
       <p><b><font size="3">学术服务 </font></b><br>
@@ -173,10 +173,14 @@
         2023年:  JIMSE Global Young Scientist Award <br/>
          <!--  2023年:  “纺织之光”中国纺织工业联合会纺织高等教育教学成果奖二等奖（2/8）  -->
         2023年: 东华大学教学成果奖一等奖（2/8）<br/>
+       <!--
         2022年: 江苏省“双创人才” <br/>
+          -->
         2022年: 东华大学学生就业创业工作促进奖 <br/>
         2022年: 上海市计算机学会教学成果奖二等奖 (3/5) <br/>
-        2021年: 姑苏领军人才 <br/>
+        <!--
+          2021年: 姑苏领军人才 <br/>
+          -->
         2021年: 长三角G60科创走廊突出贡献人才团队（领衔）<br/>
         2021年: 全国大学生电子设计竞赛上海赛区优秀指导教师奖 <br/>
         2021年: 东华大学群众体育先进个人 <br/>
