--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         
       <p><b> <font size="3">代表论文 </font> </b><br>
         <font size="0.2">
-        [1] Q. Ni, Y. Zhu, L. Zhang, X. Lu, <b>L. Zhang*(通讯作者)</b>, "Leverage Learning Behaviour Data for Students' Learning Performance Prediction and Influence Factor Analysis," <b><i>IEEE Transactions on Artificial Intelligence</i></b>, doi: 10.1109/TAI.2023.3320118 (Early Access). 
+        [1] Q. Ni, Y. Zhu, L. Zhang, X. Lu, <b>L. Zhang*(通讯作者)</b>, "Leverage Learning Behaviour Data for Students' Learning Performance Prediction and Influence Factor Analysis," <b><i>IEEE Transactions on Artificial Intelligence</i></b>, doi: 10.1109/TAI.2023.3320118 (Early Access)<br/> 
         [2]  <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” <b><i>Future Generation Computer Systems</i></b>, vol. 140, no. , pp. 311-320, 2023. (<b>中科院Top</b>)<br/>
         [3]	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” <b><i>IEEE Transactions on Instrumentation and Measurement</i></b>, vol. 72, pp. 1-11, 2023, Art no. 5501011. (<b>中科院二区</b>)<br/>
         [4]	<b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” <b><i>IEEE Sensors Journal</i></b>, vol. 22, no. 23, pp. 23529-23538, 2022. (<b>中科院Top</b>)<br/>
